--- a/Inception-L1/package.json
+++ b/Inception-L1/package.json
@@ -2,15 +2,16 @@
   "name": "inception-l1",
   "version": "1.0.0",
   "description": "Lecture 2",
- 
   "scripts": {
-    "start":"parcel index.html",
-    "build":"parcel build index.html",
+    "start": "parcel index.html",
+    "build": "parcel build index.html",
     "test": "jest"
   },
   "author": "Haripriya Chittari",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.20.12",
+    "babel-plugin-transform-remove-console": "^6.9.4",
     "parcel": "^2.8.2",
     "process": "^0.11.10"
   },
@@ -18,7 +19,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
-  "browserslist":[
+  "browserslist": [
     "last 2 versions"
   ]
 }
